--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,9 @@
         <version>1.27</version>
     </parent>
 
-    <groupId>sc.fiji</groupId>
+    <groupId>uk.ac.ox.micron</groupId>
     <artifactId>Temporal_Median</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.0-SNAPSHOT</version>
     
     <properties>
         <imagej.app.directory>/Applications/Fiji.app</imagej.app.directory>
