--- a/pom.xml
+++ b/pom.xml
@@ -12,15 +12,15 @@
     </parent>
 
     <groupId>uk.ac.ox.micron</groupId>
-    <artifactId>Temporal_Median</artifactId>
+    <artifactId>Temporal_plugins</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     
     <properties>
         <imagej.app.directory>/Applications/Fiji.app</imagej.app.directory>
     </properties>
 
-    <name>plugins/Temporal_Median.jar</name>
-    <description>Temporal median filter ImageJ 1.x plugin</description>
+    <name>plugins/Temporal_plugins.jar</name>
+    <description>Temporal plugins for ImageJ 1.x - temporal median filter, trails</description>
 
     <dependencies>
         <dependency>
