--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -1,12 +1,6 @@
-# Name: Process Pixels
-# Author: The Fiji Team
+# Name: Temporal plugins
+# Author: Graeme Ball
 # Version: 1.0.0
 
-# A single .jar file can contain multiple plugins, specified in separate lines.
-#
-# The format is: <menu>, "<menu label>", <class name>
-#
-# If something like ("<arg>") is appended to the class name, the setup() method
-# will get that as arg parameter; otherwise arg is simply the empty string.
-
 Plugins>Temporal, "Temporal Median", Temporal_Median
+Plugins>Temporal, "Trails", Trails_
