--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -2,5 +2,5 @@
 # Author: Graeme Ball
 # Version: 1.0.0
 
-Plugins>Temporal, "Temporal Median", Temporal_Median
+Plugins>Temporal, "Temporal Median2", Temporal_Median2
 Plugins>Temporal, "Trails", Trails_
