- renamed Temporal_Median2 class to TemporalMedian - using Temporal_Median name picks up old class (from WHERE???) - mvn WILL NOT compile/install any changes to Temporal_Median.class - tried emptying all caches and downloading the internet again, no cigar - Maven is an opaque, rigid, buggy, inefficient, badly-designed time sink

--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -2,5 +2,5 @@
 # Author: Graeme Ball
 # Version: 1.0.0
 
-Plugins>Temporal, "Temporal Median2", Temporal_Median2
+Plugins>Temporal, "Temporal Median", TemporalMedian_
 Plugins>Temporal, "Trails", Trails_
