--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
     <groupId>uk.ac.ox.micron</groupId>
     <artifactId>Temporal_plugins</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     
     <properties>
         <imagej.app.directory>/Applications/Fiji.app</imagej.app.directory>
